--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,12 +19,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m venv venv
-        source venv/bin/activate
         pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r dev-requirements.txt
 
     - name: Run tests
-      run: |
-        source venv/bin/activate
-        pytest
+      run: pytest
