Integrate Flasgger and document all endpoints in auth.py, profile.py, search.py and posts.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - .:/app
     environment:
       - FLASK_ENV=development
+      - FLASK_APP=app:create_app
       - DATABASE_URL=postgresql://humble:op@db:5432/humbleop
     depends_on:
       - db
